# guest-list-api

./: .env.template  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: admin.py  alembic.ini  auth.py  config.py  create_admin_user.py  database.py  dependencies.py  logger_config.py  main.py
app/migrations/: env.py
app/migrations/versions/: 2eff98ef457f_update_tables.py  74a38b86317b_create_guests_lists_and_tables.py  7f17a99cbc41_update_user_table.py  9b3559dff4dc_update_tables_delete_fields.py  9fd6542a0d1a_update_tables_added_default_value.py  ae01315651e6_make_num_unique_and_add_check_constraint.py  bc5d3ec8615a_create_user_table.py
app/models/: __init__.py  admin.py  guest_lists.py  tables.py
app/repositories/: __init__.py  base.py  guest_lists.py  tables.py
app/routers/: __init__.py  guest_lists.py  tables.py
app/schemas/: __init__.py  guest_lists.py  tables.py
app/services/: __init__.py  base.py  guest_lists.py  tables.py
app/templates/: login.html
