[tool.poetry]
name = "guest-list-api"
version = "0.1.0"
description = "API for managing guest lists and tables."
authors = ["Andrey Melchikov <andrei.melchikov25@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
